# LLM-reliance

./: .gitignore  README.md  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 01_cleaning.ipynb  01_generateBatchPayload.ipynb  01_prePayloadAnalysis.ipynb  02_cohenKappa.ipynb  03_exploratoryAnalysis.ipynb  04_inferentialStatistics.ipynb
scripts/: appendRelianceOutput.py  extractManualLabelSample.py  generateBatchPayload.py  redoFailed.py  splitPayload.py  splitPayloadEvenMore.py  startBatchJob.py  uploadPayload.py
