[project]
name = "masters-thesis-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "jupyter>=1.1.1",
    "openai>=2.44.0",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tiktoken>=0.13.0",
]
